# mip_start

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  suggestions
docs/: README.md  diet_problem_formulation.ipynb  mip_template_formulation.ipynb
mip_start/: __init__.py  __main__.py  action_report_builder.py  action_update_food_cost.py  constants.py  create_output_data.py  input_data.py  main.py  model.py  output_data.py  schemas.py
mip_template/: __init__.py  __main__.py  action_data_prep.py  action_report_builder.py  action_update_food_cost.py  constants.py  create_output_data.py  data_bridge.py  load_model_data.py  main.py  model.py  schemas.py  utils.py
test_mip_start/: README.md  test_local_execution.py  test_mip_start_pkg.py
test_mip_start/data/: testing_data.xlsx
test_mip_template/: README.md  context.py  local_execution.py  test_local_execution.py  test_mip_template.py  test_mip_template_pkg.py  utils.py
test_mip_template/data/: testing_data.xlsx
