[project]
name = "mip_start"
dynamic = ["version"]
description = "Template package for building analytics solutions"
authors = [
    {name = "Mip Wise", email = "contact@mipwise.com"}
]
requires-python = ">=3.11,<4.0"
readme = "README.md"
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent'
]
dependencies = [
    "mwcommons>=0.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.1.4",
    "plotly>=5.13.1",
    "pyscipopt>=5.4.1",
    "ticdat>=0.2.24",
]

[project.urls]
homepage = "https://github.com/mipwise/mip_start"
source = "https://github.com/mipwise/mip_start"
tracker = "https://github.com/mipwise/mip_start/issues"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=69",
    "wheel"
]

[tool.setuptools.dynamic]
version = {attr = "mip_start.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["mip_start"]
exclude = ["test_mip_start"]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
]
